<resources>
    <string name="app_name">PolmanQueue</string>
    <string name="action_settings">Settings</string>
    <string name="log_in_to_start_the_queue_process">Log in to start the queue process</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no_account_yet">No Account yet?</string>
    <string name="create_one">Create one</string>
    <string name="title_activity_sign_up1">SignUp1Activity</string>
    <string name="sign_up_to_create_an_new_account">Sign up to create an new Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up2">SignUp2Activity</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="please_complate_your_identity">Please complate your identity</string>
    <string name="identity_number">Identity Number</string>
    <string name="name">Name</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="see_queue">See Queue</string>
    <string name="start_queuing">Start Queuing</string>
    <string name="title_activity_start_queue">StartQueueActivity</string>
    <string name="congratulation">Congratulation!</string>
    <string name="your_number">Your Number</string>
    <string name="queue_number">Queue Number</string>
    <string name="title_activity_see_queue">SeeQueueActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="information">Information</string>
    <string name="please_wait">Please Wait...</string>
    <string name="old_password">Old Password</string>
    <string name="phone">Phone</string>
    <string name="date">23-06-2019</string>
    <string name="footer">Please queue to get service from our Customere Service</string>
    <string name="queue_number_not_available">Queue number not available</string>
</resources>
